# spool

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
docs/: reader.md  tui.md  writer.md
spool/reader/: __init__.py  logindex.c
spool/tui/: app.py  cli.py
spool/writer/: __init__.py
