[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spool"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "textual>=0.40.0",
    "orjson>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["spool"]

[project.scripts]
spool = "spool.tui.cli:main"
