[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "spool"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "textual>=0.40.0",
    "orjson>=3.0.0",
]

[project.scripts]
spool = "spool.tui.cli:main"

[tool.setuptools.packages.find]
include = ["spool*"]
